--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "typescript": "^4.9.4"
+    "html-webpack-plugin": "^5.5.0",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
