--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
