--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-refresh": "^0.14.0",
     "sass": "^1.57.1",
